added images to Arduino lab

--- a/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
+++ b/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
@@ -39,15 +39,15 @@
    "source": [
     "## Lab\n",
     "\n",
-    "For this group lab assignment, your group will use Python to interact with an Arduino to dynamically turn on and off an LED, and then use Python to collect and plot sensor input. There will be two Python scripts to construct and two Arduino scripts used to complete these tasks. At the end of the lab, you will be able to use Python to interact with external hardware.\n",
-    "\n",
-    "An outline of the steps to complete this lab is below:"
+    "For this group lab assignment, your group will use Python to interact with an Arduino to dynamically turn on and off an LED, and then use Python to collect and plot sensor input. There will be two Python scripts to construct and two Arduino scripts used to complete these tasks. At the end of the lab, you will be able to use Python to interact with external hardware."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "An outline of the steps to complete this lab is below:\n",
+    "\n",
     "### Part 1: Turn an LED on and off with Python and an Arduino \n",
     "\n",
     "(a) Download the Arduino IDE \n",
@@ -124,11 +124,11 @@
     "\n",
     "Connect the Arduino to the computer using the red USB cable. Note that USB ports in monitors sometimes do not work correctly with Arduinos. Use a USB port which is part of the computer. In the Arduino IDE Window that contains the Blink sketch, click the check mark to Verify, then click the arrow to Upload. \n",
     "\n",
-    "![Check to Verify](#)\n",
+    "![Check to Verify](images/Check_to_Verify.png)\n",
     "\n",
-    "![Arrow to Upload](#)\n",
+    "![Arrow to Upload](images/Arrow_to_Upload.png)\n",
     "\n",
-    "Once the upload is complete, the red LED on the Arduino should blink on and off. If you don’t see the Arduino's LED blinking, you need to do some trouble shooting. Check the COM Port or try unplugging and re-plugging in the Arduino. "
+    "Once the upload is complete, the red LED on the Arduino should blink on and off. If you don't see the Arduino's LED blinking, you need to do some trouble shooting. Check the COM Port or try unplugging and re-plugging the Arduino. "
    ]
   },
   {
@@ -159,7 +159,7 @@
     "\n",
     "If the Arduino is working correctly and the LED can be turned on and off by typing ```H``` and ```L``` in the Serial Monitor, close the Serial Monitor. If the Serial Monitor is left open, Python will not be able to talk to the Arduino.\n",
     "\n",
-    "Now construct a Python script called LED.py which turns the Arduino LED on and off, just like you were able to turn the LED on and off with the Serial Monitor. To do this, you have to program Python to send the characters ```L``` and ```H``` over the Serial line to the Arduino. "
+    "Now construct a Python script called **LED.py** which turns the Arduino LED on and off, just like you were able to turn the LED on and off with the Serial Monitor. To do this, you have to program Python to send the characters ```L``` and ```H``` over the Serial line to the Arduino. "
    ]
   },
   {
@@ -243,7 +243,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2. Measure sensor output with Python and an Arduino "
+    "### Part 2. Measure sensor output with Python and an Arduino\n",
+    "\n",
+    "Once you have completed the first two part of the lab and can turn the Arduino LED on and OFF using Python, the next part of the lab is to use read a sensor (a potentiometer dial) connected to the Arduino and plot the data. "
    ]
   },
   {
@@ -252,11 +254,9 @@
    "source": [
     "#### (a) Wire a potentiometer dial to the Arduino \n",
     "\n",
-    "Once you have completed the first two parts of the lab and can turn the Arduino LED on and OFF using Python, the next part of the lab is to use read a sensor (a potentiometer dial) connected to the Arduino and plot the data. \n",
-    "\n",
     "To do this, you first need to connect connect the potentiometer to the Arduino. You should leave your LED and resistor attached as you will use this with the potentiometer. Unplug the Arduino USB cable and connect the small blue potentiometer dial to your Arduino as shown below. Also see the SIK GUIDE page 25 and the SparkFun Iventor’s kit online guide: https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-2-reading-a-potentiometer\n",
     "\n",
-    "![Arduino Potentiometer Fritzing Sketch](#)"
+    "![Arduino Potentiometer Fritzing Schematic](images/redboard_pot_led_fritzing.png)"
    ]
   },
   {
@@ -265,7 +265,7 @@
    "source": [
     "#### (b) Copy and load the potentiometer.ion sketch onto the Arduino \n",
     "\n",
-    "Open a new sketch in the Arduino IDE by going to [File] --> [New]. Copy the code below into the new sketch and save the sketch as potentiometer **read.ino** \n",
+    "Open a new sketch in the Arduino IDE by going to [File] --> [New]. Copy the code below into the new sketch and save the sketch as potentiometer **potentiometer.ino** \n",
     "\n",
     "```\n",
     "// potentiometer_read.ino\n",
@@ -302,7 +302,7 @@
    "source": [
     "#### (c) Twist the potentiometer to turn the LED connected to the Arduino on and off\n",
     "\n",
-    "After the potentiometer **read.ino** sketch is uploaded to the Arduino, twist the small blue potentiometer dial back and forth and watch the LED turn on and off. The on/off point should be about half way through the little blue potentiometer’s rotation. If the LED does not turn on and off, double check your wiring and try uploading the sketch again. Ensure the Serial Monitor is closed and that Python closed the Serial Port before uploading. "
+    "After the potentiometer **potentiometer.ino** sketch is uploaded to the Arduino, twist the small blue potentiometer dial back and forth and watch the LED turn on and off. The on/off point should be about half way through the little blue potentiometer’s rotation. If the LED does not turn on and off, double check your wiring and try uploading the sketch again. Ensure the Serial Monitor is closed and that Python closed the Serial Port before uploading. "
    ]
   },
   {
@@ -394,10 +394,10 @@
     "\n",
     "Make sure your group’s Python and Arduino code are well commented and sectioned. Ensure the variable names are descriptive and there is enough documentation for another group of students to reuse the code without much trouble. Each student’s submission for the lab should be one of the following files (you do not need to submit all the .py files used in the lab, just the .py files you were primarily responsible for). Upload these two files to the D2L Lab 8 Uploads folder. \n",
     "\n",
-    "python_LED.py \n",
+    "**python_LED.py** \n",
     "\n",
     " \n",
-    "python_potentiometer.py \n"
+    "**potentiometer.py**\n"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
