--- a/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
+++ b/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
@@ -114,6 +114,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### _By P. Kazarinoff, Portland Community College, 2018_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -137,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
