--- a/ENGR114-Labs/Lab07-WebAPIs/ENGR101-Lab07-WebAPIs.ipynb
+++ b/ENGR114-Labs/Lab07-WebAPIs/ENGR101-Lab07-WebAPIs.ipynb
@@ -93,6 +93,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### _By P. Kazarinoff, Portland Community College, 2018_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -116,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
