--- a/ENGR114-Labs/Lab09-MicroPython/ENGR114-Lab09-MicroPython.ipynb
+++ b/ENGR114-Labs/Lab09-MicroPython/ENGR114-Lab09-MicroPython.ipynb
@@ -281,11 +281,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### _By P. Kazarinoff, Portland Community College, 2018_"
+   ]
   }
  ],
  "metadata": {
@@ -304,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
