edits to lab 8 external hardware

--- a/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
+++ b/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
@@ -187,23 +187,36 @@
     "ser.close() \n",
     "```\n",
     "\n",
-    "Before you run the open serial port section of code, ensure put in place the line to close the serial port. If the serial port is not closed, you will not be able to use the serial port the next time your script runs. When you have problems connecting to the Arduino with Python, often it is because the serial line was not closed. Insert the section of code below between the opening and closing of the serial port.\n",
+    "Before you run the open serial port section of code, ensure put in place the line to close the serial port. If the serial port is not closed, you will not be able to use the serial port the next time your script runs. When you have problems connecting to the Arduino with Python, often it is because the serial line was not closed. \n",
+    "\n",
+    "Insert one of the section of code below between the opening and closing of the serial port:\n",
     "\n",
     "```\n",
     "# code to run \n",
+    "\n",
+    "# turns on LED\n",
     "ser.write(b'H')\n",
     "time.sleep(1)\n",
+    "```\n",
+    "\n",
+    "or\n",
+    "\n",
+    "```\n",
+    "# code to run\n",
+    "\n",
+    "# turns off LED\n",
     "ser.write(b'L')\n",
     "time.sleep(1)\n",
     "```\n",
     "\n",
     "\n",
-    "Run the entire script to ensure there are no errors and you can open and close the serial port. A common error is the serial port COM# is not set correctly. \n",
+    "Run the entire script to ensure there are no errors and you can open and close the serial port. A common error is the serial port COM# is not set correctly. Make sure you can get the LED to turn on and off by running the two sections of code above.\n",
     "\n",
-    "Next build write a new section of code between the Open serial section and Close serial sections. This section of code will send an H character over the serial line waits a second and then sends a L character over the serial line and waits another second. The code below is designed to blink the Arduino LED on and off 10 times.\n",
+    "Next, build a new section of code between the Open serial section and Close serial sections. This section of code sends an H character over the serial line waits a second, then sends a L character over the serial line and waits another second. The code below is designed to blink the Arduino LED on and off 10 times.\n",
     "\n",
     "```\n",
-    "# code to run \n",
+    "# code to run\n",
+    "\n",
     "for t in range(10);\n",
     "    ser.write(b'H')\n",
     "    time.sleep(1)\n",
@@ -218,7 +231,7 @@
    "source": [
     "Run the entire Python script and watch the Arduino LED blink 10 times. A common problem is the serial port was not closed before the script starts. Make sure the Arduino Serial Monitor is closed and try running ```>>> ser.close()``` at the Python REPL.\n",
     "\n",
-    "Once Python successfully blinks the Arduino LED, use your Python coding skills to ask the user for input and turn on or off the Arduino's LED based on the user input. Do this using the ```input()``` function running in a while loop. Within the loop, add an if statement that will allow the program to break out of the loop and go to the ```ser.close()``` section. Remember the serial port must be closed for Python to use the serial line again. Below is an example if statement: \n",
+    "Once Python successfully blinks the Arduino LED, use your Python coding skills to ask the user for input and turn on or off the Arduino's LED based on the user input. Do this using the ```input()``` function running in a while loop. Within the loop, add an if statement that will allow the program to break out of the loop and go to the ```ser.close()``` section. Remember the serial port must be closed for Python to use the serial line again. Below is an example of an if/break statement: \n",
     "\n",
     "```\n",
     "if user_input == 'q':\n",
@@ -348,19 +361,25 @@
     "The next section of the script needs to set up the serial line for communication and read the sensor value of the potentiometer. Note the Port (```'COM4'```) must be set according to the port the Arduino is connected to. \n",
     "\n",
     "```\n",
-    "data = [] # create an empty list to store the data\n",
+    "\n",
+    "ser = serial.Serial('COM4', 9600)\n",
+    "\n",
+    "data =[]                           # initialize and empty list to store the data\n",
     "for i in range(50):\n",
-    "    with serial.Serial('COM4', 9800, timeout=1) as ser:\n",
-    "        line = ser.readline()   # read a '\\n' terminated line\n",
-    "        string = line.decode()  # convert the byte string to a unicode string\n",
-    "        print(string)\n",
-    "        data.append(float(string)) # convert the unicode string to a float and add to the data list\n",
-    "        time.sleep(0.1) # wait 0.1 seconds before reading the next line\n",
+    "\tb = ser.readline()             # read a byte string line from the Arduino's serial output\n",
+    "\tstring_n = b.decode()          # decode byte string into regular string with \\n and \\r \n",
+    "\tstring = string_n.rstrip()     # remove \\n and \\r from string\n",
+    "\tflt = float(string)            # convert string to float\n",
+    "\tprint(flt)\n",
+    "\tdata.append(flt)               # add float to the end of the data list\n",
+    "\ttime.sleep(0.1)                # wait (sleep) 0.2 seconds before the next reading\n",
+    "\n",
+    "ser.close()\n",
     "```\n",
     "\n",
     "Run the script and twist the potentiometer. You should see the potentiometer values running by in the Python REPL command window. \n",
     "\n",
-    "Finally fill in the remaining two sections in the script. Include a section that asks a user for how long to collect data. Limit the user to a maximum of 60 seconds. Then include a section that plots the potentiometer reading vs. time. Note that the data is recorded every 10 milliseconds. \n",
+    "Finally, fill in the remaining two sections in the script. Include a section that asks a user for how long to collect data. Limit the user to a maximum of 60 seconds. Then include a section that plots the potentiometer reading vs. time. Note that the data is recorded every 10th of a second. \n",
     "\n",
     "When the Python script runs, it should function in the following way:\n",
     "\n",
@@ -368,7 +387,7 @@
     "Enter the number of seconds to record data (0 - 60) : 10\n",
     "```\n",
     "\n",
-    "[matplotlib plot of potentiometer data](#)"
+    "![matplotlib plot of potentiometer data](images/potentiometer_reading.png)"
    ]
   },
   {
@@ -379,9 +398,9 @@
     "\n",
     "If you have time, there is some additional functionality you can add to your Python script: \n",
     "\n",
-    " * Measure the amount of time the LED is on and off. \n",
+    " * Display the high and low potentiometer readings \n",
     "\n",
-    " * Plot the amount of time the LED is on and off. Connect a photocell to the Arduino and plot photocell readings with Python \n",
+    " * Connect a photocell to the Arduino and plot photocell readings with Python \n",
     "\n",
     " * Build a dynamic plot using an animated line that changes as the potentiometer value changes "
    ]
@@ -394,10 +413,9 @@
     "\n",
     "Make sure your group’s Python and Arduino code are well commented and sectioned. Ensure the variable names are descriptive and there is enough documentation for another group of students to reuse the code without much trouble. Each student’s submission for the lab should be one of the following files (you do not need to submit all the .py files used in the lab, just the .py files you were primarily responsible for). Upload these two files to the D2L Lab 8 Uploads folder. \n",
     "\n",
-    "**python_LED.py** \n",
+    "**LED.py** \n",
     "\n",
-    " \n",
-    "**potentiometer.py**\n"
+    " **potentiometer.py**\n"
    ]
   },
   {
@@ -431,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
