edits to web API function and Taylor series function, took out gathered latex

--- a/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
+++ b/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
@@ -8,9 +8,8 @@
     "\n",
     "In this lab, you will create a function that calculates the Taylor Series of two mathematical functions. A Taylor Series is an infinite series of mathematical terms that when summed together approximate a mathematical function. Taylor Series can be used to approximate $e^x$, $sine$, and $cosine$. An example of a Taylor series is below:\n",
     "\n",
-    "\\[\\begin{gathered}\n",
-    "  \\cos \\left( x \\right) = \\sum\\limits_{n = 0}^\\infty  {{{\\left( { - 1} \\right)}^n}\\frac{{{x^{2n}}}}{{\\left( {2n} \\right)!}}}  = 1 - \\frac{{{x^2}}}{{2!}} + \\frac{{{x^4}}}{{4!}} - \\frac{{{x^6}}}{{6!}} + \\frac{{{x^8}}}{{8!}} - \\frac{{{x^{10}}}}{{10!}} + \\ ... \\hfill \\\\ \n",
-    "\\end{gathered} \\]"
+    " \n",
+    "$$  \\cos \\left( x \\right) = \\sum\\limits_{n = 0}^\\infty  {{{\\left( { - 1} \\right)}^n}\\frac{{{x^{2n}}}}{{\\left( {2n} \\right)!}}}  = 1 - \\frac{{{x^2}}}{{2!}} + \\frac{{{x^4}}}{{4!}} - \\frac{{{x^6}}}{{6!}} + \\frac{{{x^8}}}{{8!}} - \\frac{{{x^{10}}}}{{10!}} + \\ ... $$ \n"
    ]
   },
   {
@@ -71,10 +70,9 @@
    "source": [
     "The Taylor series for our two functions are below:\n",
     "\n",
-    "\\[\\begin{gathered}\n",
-    "  {e^x} = \\sum\\limits_{n = 0}^\\infty  {\\frac{{{x^n}}}{{n!}}}  = 1 + x + \\frac{{{x^2}}}{{2!}} + \\frac{{{x^3}}}{{3!}} + \\frac{{{x^4}}}{{4!}} + ... \\hfill \\\\\n",
-    "  \\sin \\left( x \\right) = \\sum\\limits_{n = 0}^\\infty  {{{\\left( { - 1} \\right)}^n}\\frac{{{x^{2n + 1}}}}{{\\left( {2n + 1} \\right)!}}}  = x - \\frac{{{x^3}}}{{3!}} + \\frac{{{x^5}}}{{5!}} - \\frac{{{x^7}}}{{7!}} + \\frac{{{x^9}}}{{9!}} - ... \\hfill \\\\ \n",
-    "\\end{gathered} \\]"
+    "$$  {e^x} = \\sum\\limits_{n = 0}^\\infty  {\\frac{{{x^n}}}{{n!}}}  = 1 + x + \\frac{{{x^2}}}{{2!}} + \\frac{{{x^3}}}{{3!}} + \\frac{{{x^4}}}{{4!}} + ... $$\n",
+    " \n",
+    "$$ \\sin \\left( x \\right) = \\sum\\limits_{n = 0}^\\infty  {{{\\left( { - 1} \\right)}^n}\\frac{{{x^{2n + 1}}}}{{\\left( {2n + 1} \\right)!}}}  = x - \\frac{{{x^3}}}{{3!}} + \\frac{{{x^5}}}{{5!}} - \\frac{{{x^7}}}{{7!}} + \\frac{{{x^9}}}{{9!}} - ... $$"
    ]
   },
   {
