--- a/ENGR114-Labs/Lab07-WebAPIs/ENGR101-Lab07-WebAPIs.ipynb
+++ b/ENGR114-Labs/Lab07-WebAPIs/ENGR101-Lab07-WebAPIs.ipynb
@@ -44,14 +44,16 @@
    "source": [
     "You will accomplish this task in a group. Each group member is responsible for creating one of four functions: \n",
     "\n",
-    "```user_input()``` A function to gather user input and validate it. The input of this function will be null (), as the requests for user input will come from within the body of the function. Include error checking as part of the function. The output of the function will be a 1D matrix used by the API function below. \n",
+    "```user_input()``` A function to gather user input and validate it. The input of this function will be null (), as the requests for user input will come from within the body of the function. Include error checking as part of the function. The output of the function will be a 1D matrix used by the ```call_API()``` function below. \n",
     "\n",
     "\n",
-    "```call_API()``` A function to call the ThingSpeak Web API to retrieve the desired weather data. See http://www.mathworks.com/help/thingspeak/get-channel-field-feed.html and Pandas ```read_csv()``` function. An example API call is: ```df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20')``` Only the desired weather data type and number of data points should be retrieved. Note the input for this function will come from the user input function above and the output will be sent to the cleanup function below. \n",
+    "```call_API()``` A function to call the ThingSpeak Web API to retrieve the desired weather data. See http://www.mathworks.com/help/thingspeak/get-channel-field-feed.html and Pandas ```read_csv()``` function. \n",
     "\n",
-    "```clean_data()``` A function to clean up the data and simplify it to a 1D matrix. See the MATLAB table array data types and Chapter 11 in the textbook regarding indexing and pulling data out of table arrays. Try using: df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20') to bring in a sample data set. Note the input of this function comes from the web API function above and the output needs to be a 1D matrix that will be used by the plotting function below. \n",
+    "An example web API call is: ```df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20')``` Only the desired weather data type and number of data points should be retrieved. Note the input for this function will come from the ```user_input()``` function above and the output will be sent to the ```clean_data()``` function below. \n",
     "\n",
-    "```plot_data()``` A function to plot the data. Data point number on the x-axis and the weather data on the y-axis. Axis labeled with units. Construct the title and y-axis labels dynamically as these will change based what the user selects. Note the input of this function will be a 1D matrix from the cleanup function above as well as some of the user input gathered by the user input function. The output of this function will be a null output [], but within the body of the function, the plot will be called. "
+    "```clean_data()``` A function to clean up the data and simplify it to a 1D matrix. See the Pandas documentation for information on how to convert a column of a Panda's dataframe into a Python list or Numpy array. Try using: df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20') to bring in a sample data set. Note the input of this function comes from the ```call_API()``` function above and the output needs to be a list or 1D array that will be used by the ```plot_data()``` function below. \n",
+    "\n",
+    "```plot_data()``` A function to plot the data. Data point number on the x-axis and the weather data on the y-axis. Axis labeled with units. Construct the title and y-axis labels dynamically as these will change based what the user selects. Note the input of this function will be a list or 1D array from the ```clean_data()``` function above as well as some of the user input gathered by the ```user_input()``` function. The output of this function will be a null (there will be no ```return``` statement, but within the body of the function, the plot will be called. "
    ]
   },
   {
@@ -64,11 +66,11 @@
     "\n",
     "Your group will have to decide on a couple things: \n",
     " \n",
-    " * Who is going to make which function? \n",
+    " * Who is going to construct each function? \n",
     " \n",
-    " * How are you going to share code? \n",
+    " * How will your group to share code? \n",
     " \n",
-    " * What will be the standard function inputs and outputs? The output from one function will be needed as input for another function. \n",
+    " * What will be the standard function inputs and outputs? The output from one function is needed as input for another function. \n",
     " \n",
     "Ensure your functions contain doc string descriptions and examples. Ensure all the code is sectioned and commented."
    ]
@@ -79,7 +81,7 @@
    "source": [
     "## Deliverables\n",
     "\n",
-    "Each student’s submissions for the lab should contain the following files (all four function files and your script that calls them) regardless of which function you constructed. Upload these 5 files to the D2L Lab 7 Uploads folder. \n",
+    "Each student’s submissions for the lab must contain the following files (all four function files and your Python script that calls the four functions) regardless of which function you constructed. Upload these 5 files to the D2L Lab 7 Uploads folder. \n",
     "\n",
     " * user_input.py \n",
     "\n",
