type edits to MicroPython lab

--- a/ENGR114-Labs/Lab09-MicroPython/ENGR114-Lab09-MicroPython.ipynb
+++ b/ENGR114-Labs/Lab09-MicroPython/ENGR114-Lab09-MicroPython.ipynb
@@ -79,14 +79,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use PuTYY to connect to the ESP8266 microcontroller"
+    "### Use PuTTY to connect to the ESP8266 microcontroller"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensure the Feather Huzzah board is connected with a USB cable, then connect to it with PuTTY using the proper serial port (COM#) and 115200 baud. Remember to use the **Serial** radio button under **Connection Type:** to select serial communication or you will be trying to communicate with the Feather Huzzah over SSH which won't work. \n",
+    "Ensure the Feather Huzzah board is connected with a USB cable, then connect to it with PuTTY using the proper serial port (COM#) and 115200 baud. Remember to use the **Serial** radio button under **Connection Type:** to select serial communication or you will be trying to communicate with the ESP8266 Microcontroller over SSH which won't work. \n",
     "\n",
     "![PuTTY in Windows 10 start menu](images/putty_in_start_menu.png)\n",
     "\n",
