a couple Taylor series lab edits

--- a/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
+++ b/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# ENGR114 - Lab 06 - Taylor Series\n",
     "\n",
-    "In this lab, you will create a function that calculates the Taylor Series of two mathematical functions. A Taylor Series is an infinite series of mathematical terms that when summed together approximate a mathematical function. Taylor Series can be used to approximate $e^x$, $sine$, and $cosine$. An example of a Taylor series is below:\n",
+    "In this lab, you will create a Python function that calculates the Taylor Series of two mathematical functions. A Taylor Series is an infinite series of mathematical terms that when summed together approximate a mathematical function. A Taylor Series can be used to approximate $e^x$, $sine$, and $cosine$. An example of a Taylor Series is below:\n",
     "\n",
     " \n",
     "$$  \\cos \\left( x \\right) = \\sum\\limits_{n = 0}^\\infty  {{{\\left( { - 1} \\right)}^n}\\frac{{{x^{2n}}}}{{\\left( {2n} \\right)!}}}  = 1 - \\frac{{{x^2}}}{{2!}} + \\frac{{{x^4}}}{{4!}} - \\frac{{{x^6}}}{{6!}} + \\frac{{{x^8}}}{{8!}} - \\frac{{{x^{10}}}}{{10!}} + \\ ... $$ \n"
@@ -27,7 +27,7 @@
    "source": [
     "## Lab\n",
     "\n",
-    "Create a new m-file called **taylor_series.py** that will contain a user-defined function **taylor()**. The **taylor()** function will have the function name, inputs, outputs, and **help** command information as shown.\n",
+    "Create a new Python script called **taylor_series.py** which will contain a user-defined function **taylor()**. The **taylor()** function will have the function name, inputs, and doc string information as shown.\n",
     "\n",
     "```\n",
     "def taylor(func, x, terms):\n",
@@ -39,36 +39,36 @@
     "     - func: A string describing which function to do the Taylor \n",
     "           series expansion on.  ('sin' for sine(x), 'exp' for e^x)\n",
     "     - x: Input argument that the function will operate on.  Must be a float or an int between -50 and 50\n",
-    "     - terms: number of terms in the taylor series. Must be an int greater than zero up to an including 100.\n",
+    "     - terms: number of terms in the Taylor Series. Must be an int greater than zero up to and including 100.\n",
     " \n",
     " Output:\n",
     "     - series_sum: equals the sum of all of the terms in the taylor series up to the number of terms specified.\n",
-    "       Will be a float\n",
+    "       Will be a float.\n",
     "\n",
     "\"\"\"\n",
     "```\n",
     "\n",
+    "Above the function definition, include a block comment with your name, course, quarter, lab title, and date.  \n",
     "\n",
-    "Underneath the docstring above, include a block comment with your name, the date, and the lab assignment number.  \n",
+    "Underneath the comment block, create the ```taylor()``` function that fulfills the description below.\n",
     "\n",
-    "Underneath the comment block, create a function that fulfills the given description.\n",
+    "Your function should verify that all three of its input variables have values as specified in the description, otherwise, use an ```if: raise Exception()``` structure to tell the user which variable is invalid and give the constraints.\n",
     "\n",
-    "Your function should verify that all three of its input variables have values as specified in the description, otherwise, use the **error** command to tell the user which variable is invalid and give the constraints.\n",
-    "\n",
-    "For example, if a user tries to call the function with **x** set equal to -60, this should trigger the following command.\n",
+    "For example, if a user tries to call the function with **x** set equal to -60, this should trigger the following exception.\n",
     "\n",
     "```\n",
-    "     error('x must be $>= -50$ and $<= 50$')\n",
-    "```\n",
+    "if x > 50:\n",
+    "    raise Exception('x should not exceed 50')\n",
     "\n",
-    "Your function can use a **while loop**, or a **for loop** to verify the inputs of the **func** variable."
+    "```\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Taylor series for our two functions are below:\n",
+    "The Taylor Series for our two functions are below:\n",
     "\n",
     "$$  {e^x} = \\sum\\limits_{n = 0}^\\infty  {\\frac{{{x^n}}}{{n!}}}  = 1 + x + \\frac{{{x^2}}}{{2!}} + \\frac{{{x^3}}}{{3!}} + \\frac{{{x^4}}}{{4!}} + ... $$\n",
     " \n",
@@ -79,9 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that as **n** increases, each successive term gets smaller in absolute value.  Knowing this, we can assert that if, for instance, the $10^{th}$ term in a Taylor series is 0.005, then 10 iterations of the function will bring the sum of terms 1 through 10 to be within +/- 0.005 of the actual answer.  In other words, 10 iterations yields an answer that has an error with absolute value of 0.005 or less.\n",
+    "Note that as $n$ increases, each successive term gets smaller in absolute value.  Knowing this, we can assert that if, for instance, the $10^{th}$ term in a Taylor series is 0.005, then 10 iterations of the function will bring the sum of terms 1 through 10 to be within +/- 0.005 of the actual answer.  In other words, 10 iterations yields an answer that has an error with absolute value of 0.005 or less.\n",
     "\n",
-    "Your function should use a **while loop** or **for loop** to compute each of these terms until the latest term's absolute value is equal to or less than **error_ub**.  If/when the latest term in the Taylor series is within this boundary, use an **if break** statement to exit the **while loop**.  Otherwise, the **while loop** should keep running until it has been run **max\\_iters** times.\n",
+    "Your function should use a **while loop** or **for loop** to compute and sum each of these terms.  After the latest term in the Taylor Series is calculated and added, use an **if break** statement to exit the **loop**.  Otherwise, the **loop** should keep running until it has been run $n$ times.\n",
     " "
    ]
   },
@@ -91,7 +91,7 @@
    "source": [
     "Note that your **taylor()** function will not compute the exact value of $sin(x)$ or $e^x$, the Taylor Series to a finite number of terms is an estimate compared to the actual value of $sin(x)$ or $e^x$.\n",
     "\n",
-    "You might find the following tips somewhat helpful:\n",
+    "Below are a couple of tips to help you complete the lab:\n",
     "\n",
     " * Start working with your .py-file as a regular script (not a function) with hard coded input values.  This way you can easily run and re-run it for testing.\n",
     " * Get either the $e^x$ or the $sin(x)$ capability working before adding the other capability. \n",
@@ -106,8 +106,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your instructor may provide some sample output file called **ENGR114-Lab06-sample_output.txt**.\n",
-    "\n",
     "Once you are satisfied that your file meets all the requirements, suppress all screen output, save the file, and submit it to appropriate D2L folder."
    ]
   },
@@ -142,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
