--- a/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
+++ b/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "## Lab\n",
     "\n",
-    "For this group lab assignment, your group will use Python to interact with an Arduino to dynamically turn on and off an LED, and then use Python to collect and plot sensor input. There will be two Python scripts to construct and two Arduino scripts used to complete these tasks. At the end of the lab, you will be able to use Python to interact with external hardware."
+    "For this group lab assignment, your group will use Python to interact with an Arduino to dynamically turn on and off an LED, and then use Python to collect and plot the sensor data. Your group will construct two Python scripts and use tow Arduino scripts to complete these tasks. At the end of the lab, you will be able to use Python to interact with external hardware."
    ]
   },
   {
@@ -109,7 +109,7 @@
     "#### (b) Wire an LED to the Arduino \n",
     "\n",
     "From the Arduino kit, take out an LED, a 330 Ohm resistor and two jumper wires. Connect the LED, resistor and wires as shown below. Also see the SIK GUIDE page 19 and the SparkFun Iventor’s kit online guide: \n",
-    "https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-1-blinking-an-led\n",
+    "https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-1-blinking-an-led Note that LED's have two different length \"legs\". The short leg should connect to ground (thru a resistor), the long leg should connect to the Arduino's Pin 13.\n",
     "\n",
     "![Arduino with LED Frizting](images/Arduino_LED_fritzing.png)"
    ]
@@ -118,9 +118,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (c) Upload the Arduino example sketch Blink.ino onto the Arduino. Confirm your Arduino and LED blinks.\n",
+    "#### (c) Upload the Arduino example sketch **Blink.ino** onto the Arduino. Confirm your Arduino and LED blinks.\n",
     "\n",
-    "Open the Arduino IDE folder and open the Arduino.exe program. Open the Arduino Blink.ino sketch by going to: [File] -->  [Examples] --> [Basics] -->  [01.Blink]\n",
+    "Open the Arduino IDE folder and open the Arduino.exe program. Open the Arduino **Blink.ino** sketch by going to: [File] -->  [Examples] --> [Basics] -->  [01.Blink]\n",
     "\n",
     "Connect the Arduino to the computer using the red USB cable. Note that USB ports in monitors sometimes do not work correctly with Arduinos. Use a USB port which is part of the computer. In the Arduino IDE Window that contains the Blink sketch, click the check mark to Verify, then click the arrow to Upload. \n",
     "\n",
@@ -449,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
